--- a/package.json
+++ b/package.json
@@ -1,37 +1,18 @@
 {
   "name": "bamazon",
   "version": "1.0.0",
-<<<<<<< HEAD
-  "description": "<p align=\"center\"> <img src=\"https://github.com/GrissomErick/Bamazon/blob/master/images/bamazon.png?raw=true\" alt=\"Project logo\"></img> </p>",
-=======
-  "description": "Amazon like store front using Node JS and mysql db",
->>>>>>> 6b88e6a50bee12e1ba8fbeddb6e22e13dedb6a2b
+  "description": "",
   "main": "bamazonCustomer.js",
   "dependencies": {
     "cli-table": "^0.3.1",
+    "colors": "^1.2.1",
     "inquirer": "^3.3.0",
     "mysql": "^2.15.0"
   },
   "devDependencies": {},
   "scripts": {
-<<<<<<< HEAD
     "test": "echo \"Error: no test specified\" && exit 1"
-=======
-    "test": "node bamazonCustomer.js"
->>>>>>> 6b88e6a50bee12e1ba8fbeddb6e22e13dedb6a2b
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GrissomErick/Bamazon.git"
-  },
-<<<<<<< HEAD
   "author": "",
-=======
-  "author": "Erick Grissom",
->>>>>>> 6b88e6a50bee12e1ba8fbeddb6e22e13dedb6a2b
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GrissomErick/Bamazon/issues"
-  },
-  "homepage": "https://github.com/GrissomErick/Bamazon#readme"
+  "license": "ISC"
 }
