--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bamazon",
   "version": "1.0.0",
-  "description": "",
   "main": "bamazonCustomer.js",
   "dependencies": {
     "cli-table": "^0.3.1",
@@ -14,5 +13,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
